--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@cgcdoss/cassiosantos",
-  "version": "1.0.0",
+  "name": "cgcdoss",
+  "version": "1.2.0",
   "description": "Cartão pessoal em Node.JS",
   "main": "index.js",
   "scripts": {
