--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions: 
       contents: read
-      packages: write
+      packages: write_package
     steps:
       - uses: actions/checkout@v3
       # Setup .npmrc file to publish to npm
@@ -18,4 +18,4 @@ jobs:
       - run: npm ci
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: bla bla
+          NODE_AUTH_TOKEN: ${{ github.token }}
